# legal-intelli

./: .gitignore  Agents.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  main.py
backend/app/api/routes/: contracts.py
backend/app/core/: interfaces.py
backend/app/core/embeddings/: __init__.py  embedder.py  store.py
backend/app/core/ingestion/: __init__.py  classifier.py  extractor.py  segmenter.py
backend/app/models/: __init__.py  clause.py  contract.py
backend/app/schemas/: __init__.py  clause.py  contract.py
backend/tests/: conftest.py  test_ingestion.py
